# MCP-Server-Security-Scanner

./: .gitignore  README.md  pyproject.toml  rules.json  sample_manifest.json
docs/: threat-model.md
findings/: FINDING-002.md  FINDING-003.md  REAL-TEST-FILESYSTEM.md  executive-summary.md  real-world-github-mcp-test.md  real-world-testing-results.md  tool-description-injection.md
mcp_redteam/: __init__.py  cli.py
mcp_redteam/attackers/: __init__.py  simulators.py
mcp_redteam/reporters/: __init__.py  cvss.py
mcp_redteam/scanners/: static.py
scripts/: probe_real_servers.py
tests/: test_scanners.py
