[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-redteam"
version = "0.1.0"
description = "Static and adversarial scanner for MCP server security findings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.scripts]
mcp-redteam = "mcp_redteam.cli:main"

[tool.setuptools]
packages = ["mcp_redteam", "mcp_redteam.attackers", "mcp_redteam.reporters", "mcp_redteam.scanners"]
